--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DetailActivity"></activity>
+        <activity android:name=".Detail" />
+        <activity android:name=".views.MovieDetail" />
+        <activity android:name=".views.MovieReview"></activity>
     </application>
 
 </manifest>
