--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         </activity>
         <activity android:name=".Detail" />
         <activity android:name=".views.MovieDetail" />
-        <activity android:name=".views.MovieReview"></activity>
+        <activity android:name=".views.MovieReview" />
+        <activity android:name=".views.MovieVideo"></activity>
     </application>
 
 </manifest>
